--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 10vh;
+    /* padding: 10vh; */
     background-color:rgb(40, 29, 53);
     height: 100vh;
     width:auto;
@@ -21,8 +21,8 @@ body{
 ul{
     position: relative;
     transform: skewY(-15deg);
-    width: 100vh;
-    margin-left: 30rem;
+    /* width: 100vh; */
+    /* margin-left: 30rem; */
 
     
 }
@@ -94,8 +94,8 @@ li:last-child::after{
   .rei{
     display: flex;
     margin-top: 10rem;
-    flex-basis: 200;
-
+    text-align: center;
+    padding: 0 8%;
   }
   h1{
     position: relative;
