--- a/pages/style1.css
+++ b/pages/style1.css
@@ -101,6 +101,9 @@ img:nth-child(3){
 img:nth-child(4){
     transform: rotateY(180deg) translateZ(120px)
 }
+img:nth-child(5){
+        transform: rotateY(-180deg) translateZ(120px)
+}
 
 .caixa2{
     display: flex;
