--- a/pages/style1.css
+++ b/pages/style1.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color:black;
+    background-color:hsl(0, 0%, 0%);
     justify-content: center;
     align-items: center;
     width: auto;
@@ -108,6 +108,8 @@ img:nth-child(5){
 .caixa2{
     display: flex;
     grid-auto-columns: minmax(2);
+
+    margin-bottom: 40px;
 }
 
 .shadow__btn {
@@ -133,4 +135,101 @@ img:nth-child(5){
                 0 0 25px rgb(0,140,255),
                 0 0 50px rgb(0,140,255),
                 0 0 100px rgb(0,140,255);
+  }
+
+  .caixas{
+    background:none;
+    width: 100vw;
+    height: 50vh;
+  }
+
+
+  div#carousel { 
+    font-size:0; 
+    margin-bottom: 3rem; 
+    overflow: hidden; 
+  }
+  figure#spinner { 
+    transform-style: preserve-3d; 
+    height: 300px; 
+    transform-origin: 50% 50% -525px; 
+    transition: 1s; 
+  } 
+  figure#spinner img { 
+    flex: 0 0 auto; /* Impede que as imagens quebrem */
+    width: 40%; max-width: 425px; 
+    position: absolute; left: 35%;
+    transform-origin: 50% 50% -500px;
+    outline:1px solid transparent; 
+  }
+  figure#spinner img:nth-child(1) { transform:rotateY(0deg); }
+  figure#spinner img:nth-child(2) { transform: rotateY(-45deg); }
+  figure#spinner img:nth-child(3) { transform: rotateY(-90deg); }
+  figure#spinner img:nth-child(4) { transform: rotateY(-135deg); }
+  figure#spinner img:nth-child(5){ transform: rotateY(-180deg); }
+  figure#spinner img:nth-child(6){ transform: rotateY(-225deg); }
+  figure#spinner img:nth-child(7){ transform: rotateY(-270deg); }
+  figure#spinner img:nth-child(8){ transform: rotateY(-315deg); }
+  div#carousel ~ span { 
+    color: #ae00ff; 
+    margin: 5%; 
+    display: inline-block; 
+    text-decoration: none; 
+    font-size: 2rem; 
+    transition: 0.6s color; 
+    position: relative; 
+    margin-top: -6rem; 
+    border-bottom: none; 
+    line-height: 0; }
+  div#carousel ~ span:hover { color: #888; cursor: pointer; }
+  .cert {
+    text-align: center; /* Centralizar horizontalmente */
+    display: flex;
+    justify-content: center; /* Centralizar horizontalmente */
+    align-items: center; /* Centralizar verticalmente */
+    height: 50px; /* Altura total da tela */
+    color: #9d00ff;
+  }
+  
+  /* Estilos responsivos para iPhone SE */
+  @media screen and (max-width: 780px) {
+    div#carousel { 
+      padding-top: 5%; 
+      font-size:0; 
+      margin-bottom: 3rem; 
+      overflow: hidden; 
+    }
+    figure#spinner { 
+      transform-style: preserve-3d; 
+      height: 300px; 
+      transform-origin: 50% 50% -200px; 
+      transition: 1s; 
+    } 
+    figure#spinner img { 
+      flex: 0 0 auto; /* Impede que as imagens quebrem */
+      width: 40%; max-width: 425px; 
+      position: absolute; left: 35%;
+      transform-origin: 50% 50% -200px;
+      outline:1px solid transparent; 
+    }
+    figure#spinner img:nth-child(1) { transform:rotateY(0deg); }
+  figure#spinner img:nth-child(2) { transform: rotateY(-45deg); }
+  figure#spinner img:nth-child(3) { transform: rotateY(-90deg); }
+  figure#spinner img:nth-child(4) { transform: rotateY(-135deg); }
+  figure#spinner img:nth-child(5){ transform: rotateY(-180deg); }
+  figure#spinner img:nth-child(6){ transform: rotateY(-225deg); }
+  figure#spinner img:nth-child(7){ transform: rotateY(-270deg); }
+  figure#spinner img:nth-child(8){ transform: rotateY(-315deg); }
+  div#carousel ~ span { 
+    color: #9d00ff; 
+    margin: 5%; 
+    display: inline-block; 
+    text-decoration: none; 
+    font-size: 2rem; 
+    transition: 0.6s color; 
+    position: relative; 
+    margin-top: -6rem; 
+    border-bottom: none; 
+    line-height: 0; }
+  div#carousel ~ span:hover { color: #888; cursor: pointer; }
   }
