--- a/pages/style1.css
+++ b/pages/style1.css
@@ -148,6 +148,7 @@ img:nth-child(5){
     font-size:0; 
     margin-bottom: 3rem; 
     overflow: hidden; 
+    width: 100%;
   }
   figure#spinner { 
     transform-style: preserve-3d; 
@@ -210,7 +211,7 @@ img:nth-child(5){
       width: 40%; max-width: 425px; 
       position: absolute; left: 35%;
       transform-origin: 50% 50% -200px;
-      outline:1px solid transparent; 
+      outline:2px solid transparent; 
     }
     figure#spinner img:nth-child(1) { transform:rotateY(0deg); }
   figure#spinner img:nth-child(2) { transform: rotateY(-45deg); }
@@ -233,3 +234,4 @@ img:nth-child(5){
     line-height: 0; }
   div#carousel ~ span:hover { color: #888; cursor: pointer; }
   }
+  
